<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".addRemindersScreen">

	<com.dpro.widgets.WeekdaysPicker
		android:id="@+id/weekdays_picker"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editTextDate3"
		app:sunday_first_day="false" />

	<EditText
		android:id="@+id/pill_name_var"
		android:layout_width="380dp"
		android:layout_height="44dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/pill_name_var_text"
		android:inputType="textPersonName"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:autofillHints="" />

	<TextView
		android:id="@+id/begin_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/begin_date_text"
		android:textSize="16sp"
		app:layout_constraintEnd_toStartOf="@+id/end_date"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pill_name_var" />

	<TextView
		android:id="@+id/end_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="45dp"
		android:layout_marginTop="32dp"
		android:text="@string/end_date_text"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/begin_date"
		app:layout_constraintTop_toBottomOf="@+id/pill_name_var" />

	<EditText
		android:id="@+id/editTextDate2"
		android:layout_width="174dp"
		android:layout_height="45dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:ems="10"
		android:inputType="date"
		app:layout_constraintEnd_toStartOf="@+id/editTextDate3"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/begin_date" />

	<EditText
		android:id="@+id/editTextDate3"
		android:layout_width="174dp"
		android:layout_height="45dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:inputType="date"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/editTextDate2"
		app:layout_constraintTop_toBottomOf="@+id/end_date" />

	<TextView
		android:id="@+id/pills_per_day"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/number_per_day_pills"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/weekdays_picker" />

	<Spinner
		android:id="@+id/spinner_days_per"
		android:layout_width="409dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="16dp"
		android:spinnerMode="dialog"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pills_per_day" />

	<TextView
		android:id="@+id/hour_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="@string/number_per_day_hour"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/spinner_days_per" />

	<EditText
		android:id="@+id/editTextTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:ems="10"
		android:inputType="time"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/hour_text" />

	<Button
		android:id="@+id/apply_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:backgroundTint="#4CAF50"
		android:onClick="onApplyClick"
		android:text="@string/accept_button_text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<Button
		android:id="@+id/cancel_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginBottom="16dp"
		android:backgroundTint="#E91E1E"
		android:onClick="onCancelClick"
		android:text="@string/cancel_button_text"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>